# MyFin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts  vite.config.ts
packaging/: PKGBUILD  README.md  myfin.desktop
qml/: Main.qml
qml/components/: AppButton.qml  AppComboBox.qml  AppSwitch.qml  AppTextField.qml  CoverArt.qml  SidebarButton.qml  TrackDelegate.qml  TransportBar.qml
qml/pages/: HomePage.qml  LibraryPage.qml  NowPlayingPage.qml  QueuePage.qml  SettingsPage.qml
src/: App.tsx  index.css  main.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: AppBootstrap.cpp  AppBootstrap.h  AppServices.cpp  AppServices.h  applicationcontroller.cpp  applicationcontroller.h  main.cpp
src/components/: AIInsightCard.tsx  Header.tsx  LoginScreen.tsx  NowPlayingFullscreen.tsx  PlayerBar.tsx  SettingsModal.tsx  Sidebar.tsx  SynesthesiaBackground.tsx  TrackCard.tsx
src/components/ui/: NavItem.tsx  PlasmaVolume.tsx  ThemeSwitch.css  ThemeSwitch.tsx
src/components/views/: AlbumsView.tsx  ArtistsView.tsx  ExploreView.tsx  FavoritesView.tsx  PlaylistsView.tsx
src/core/: ConversionManager.cpp  ConversionManager.h  track.cpp  track.h
src/domain/entities/: Album.h  Artist.h  Playlist.h  Track.h
src/domain/value_objects/: ServerProfile.h
src/infrastructure/images/: CoverArtImageProvider.cpp  CoverArtImageProvider.h
src/infrastructure/jellyfin/: JellyfinApiClient.cpp  JellyfinApiClient.h
src/infrastructure/logging/: Logging.cpp  Logging.h
src/infrastructure/playback/: GStreamerPlaybackBackend.cpp  GStreamerPlaybackBackend.h  IPlaybackBackend.h  PlaybackController.cpp  PlaybackController.h  QtMediaPlaybackBackend.cpp  QtMediaPlaybackBackend.h
src/infrastructure/settings/: AppPaths.cpp  AppPaths.h  SettingsService.cpp  SettingsService.h
src/infrastructure/storage/: LibraryCache.cpp  LibraryCache.h  StateStore.cpp  StateStore.h
src/integration/: jellyfinclient.cpp  jellyfinclient.h
src/lib/: gemini.ts  runtime.ts
src/linux/: MprisService.cpp  MprisService.h  NotificationService.cpp  NotificationService.h  SecretStore.cpp  SecretStore.h  SingleInstanceService.cpp  SingleInstanceService.h
src/models/: tracklistmodel.cpp  tracklistmodel.h
src/player/: playbackcontroller.cpp  playbackcontroller.h
src/presentation/models/: TrackListModel.cpp  TrackListModel.h
src/presentation/viewmodels/: AppRootViewModel.cpp  AppRootViewModel.h  AudioSettingsViewModel.cpp  AudioSettingsViewModel.h  LibraryViewModel.cpp  LibraryViewModel.h  PlaybackViewModel.cpp  PlaybackViewModel.h  SessionViewModel.cpp  SessionViewModel.h
src/services/: jellyfin.ts
src/settings/: settingsmanager.cpp  settingsmanager.h
src/theme/: thememanager.cpp  thememanager.h
src/ui/qml/: Main.qml
src/ui/qml/components/: AppButton.qml  AppComboBox.qml  AppTextField.qml  MiniPlayer.qml  SidebarButton.qml
src/ui/qml/screens/: ConfigScreen.qml  HomeScreen.qml  LoginScreen.qml  SettingsScreen.qml
src/ui/qml/theme/: Theme.qml
